--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "scripts": {
     "start:front": "cd frontend && npm run dev",
     "start:back": "cd backend && node server.js",
-    "dev": "cd frontend && npm run dev && cd .. && cd backend && node server.js"
+    "dev": "cd frontend && npm run dev & cd ../backend && node server.js"
   }
 }
